# youtube-AIsummary

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/workflows/: lint.yml  security.yml  test.yml
assests/: telegram-bot-QR.png:Zone.Identifier
context/contexting-prompts/: commit-guide.md
context/professional-prompts/: 6-documentation-mentor.md
docs/: ADR-012-scraping-frequency.md  ADR-013-scraping-frequency.md  ADR-014-jwt-authentication.md  ADR-015-prompt-injection-mitigation.md  ADR-016-rate-limiting-strategy.md  PASO-23-RESUMEN.md  PASO-23.5-INFORME-FINAL.md  PASO-24-INFORME-EQUIPO.md  PASO-24-PLAN-IMPLEMENTACION.md  PASO-24-REPORTE-PROGRESO.md  PASO-24-RESUMEN-EJECUTIVO.md  PASO_24_RESUMEN_FINAL.md  PROGRESO_ACTUAL.md  architecture.md  cache-performance-report.md  cache-strategy.md  deepseek-api-doc.md  dev-enviroment.md  duration-limit-feature.md  grafana-dashboards-guide.md  logging-guide.md  paso-23-grafana-dashboard.md  paso22-resumen.md  prometheus-guide.md  prometheus-operations.md  prometheus-queries.md  roadmap.md  security-audit-report.md  step17-completion.md  step18-completion.md  step19-cache-implementation-progress.md  step19-completion-summary.md  step20-completion-summary.md  test-coverage-baseline.md  test-coverage-gap-analysis.md  test-strategy.md
docs/contexting-prompts/: ai-summarized-api-doc.md  clean-code.md  youtube-IAsummary-proyect.md
docs/professional-prompts/: 1-project-designer.md  2-incremental-builder.md  3-code-review--refactor.md  4-diagnostic-expert.md  5-deployment--ops.md  guia-uso-prompts.md
grafana/dashboards/: api-performance.json  system-overview.json  video-processing.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: prometheus.yml
migrations/: env.py
migrations/versions/: 008143b48b22_add_telegram_fields_to_summary.py  4781185b624b_initial_setup.py  79dac5ed9f40_add_skipped_status_to_video_status_enum.py  a0cb5968dd76_add_users_table_for_authentication.py  a22c096070a4_create_sources_and_videos_tables.py  ca472a01716d_add_bot_blocked_field_to_telegram_users.py  d189f0fc4824_create_telegram_users_table_and_.py  dc8586fe118a_add_soft_delete_to_videos.py  efc32c8c8df9_add_transcription_and_summary_tables.py
scripts/: benchmark_cache.py  benchmark_throughput.py  change_admin_password.py  seed_channels.py  start_beat.sh
src/api/: dependencies.py  main.py
src/api/auth/: __init__.py  dependencies.py  jwt.py  routes.py
src/api/middleware/: __init__.py  request_id.py
src/api/routes/: __init__.py  stats.py  summaries.py  transcriptions.py  videos.py
src/api/schemas/: __init__.py  auth.py  common.py  errors.py  stats.py  summaries.py  transcriptions.py  videos.py
src/bot/: __init__.py  context_manager.py  telegram_bot.py
src/bot/handlers/: __init__.py  help.py  history.py  search.py  sources.py  start.py
src/bot/utils/: formatters.py
src/core/: celery_app.py  celery_context.py  config.py  database.py  logging_config.py  metrics.py  security.py
src/models/: __init__.py  base.py  source.py  summary.py  telegram_user.py  transcription.py  user.py  video.py
src/repositories/: __init__.py  base_repository.py  exceptions.py  source_repository.py  summary_repository.py  telegram_user_repository.py  transcription_repository.py  user_repository.py  video_repository.py
src/services/: __init__.py  cache_service.py  downloader_service.py  input_sanitizer.py  output_validator.py  summarization_service.py  transcription_service.py  video_processing_service.py  youtube_scraper_service.py
src/services/prompts/: __init__.py  system_prompt.txt  user_template.txt
src/tasks/: __init__.py  distribute_summaries.py  scraping.py  video_processing.py
tests/api/: __init__.py  conftest.py  test_health_and_stats.py  test_stats_cache.py  test_videos.py
tests/bot/: __init__.py  conftest.py  test_formatters.py  test_handlers.py  test_history_handler.py  test_search_handler.py  test_sources_handler.py
tests/core/: test_metrics.py
tests/integration/: conftest.py  test_downloader_service.py  test_health.py  test_summarization_service.py  test_transcription_service.py  test_video_processing_service.py  test_videos_api.py
tests/integration/.old/: test_downloader_service.py  test_summarization_service.py  test_video_processing_service.py
tests/repositories/: conftest.py  test_base_repository.py  test_exceptions.py  test_source_repository.py  test_summary_repository.py  test_telegram_user_repository.py  test_transcription_repository.py  test_video_repository.py
tests/security/: __init__.py  test_authentication.py  test_output_validator.py  test_prompt_injection.py  test_rate_limiting.py
tests/services/: test_cache_service.py  test_duration_validation.py
tests/tasks/: conftest.py  test_distribute_summaries.py
tests/unit/: test_video_processing_service.py
tests/unit/repositories/: conftest.py  test_source_repository.py  test_summary_repository.py  test_telegram_user_repository.py  test_transcription_repository.py  test_user_repository.py  test_video_repository.py
tests/unit/services/: test_downloader_service.py  test_summarization_service.py  test_transcription_service.py  test_video_processing_service.py
